add project update form

--- a/TODO
+++ b/TODO
@@ -4,5 +4,6 @@ Important:
 	3. Analyze time working
 
 Far away:
-	1. Use third part accounts
+	1. Use third-party accounts
 	2. Add value and payments to projects
+	3. Add project parts
