Add forms tests and update todo

--- a/TODO
+++ b/TODO
@@ -1,9 +1,10 @@
 Important:
-	1. Create and update projects
-	2. Start/stop working
-	3. Analyze time working
+	Create and update projects (done 09.02)
+	Start/stop working
+	Analyze time working
+	Add and update lists and events
 
 Far away:
-	1. Use third-party accounts
-	2. Add value and payments to projects
-	3. Add project parts
+	Use third-party accounts
+	Add value and payments to projects
+	Add project parts
