--- a/TODO
+++ b/TODO
@@ -3,6 +3,7 @@ Important:
 	Start/stop working
 	Analyze time working
 	Add and update lists and events
+	Fun tests
 
 Far away:
 	Use third-party accounts
